vlib/v/checker/tests/call_empty_or_block_err.out
vlib/v/checker/tests/call_empty_or_block_err.vv:9:2: warning: unused variable: `a`
    7 | 
    8 | fn test_main() {
    9 |     a := foo() or { foo() or {} }
      |     ^
   10 | 
   11 |     y := if c := foo() {
vlib/v/checker/tests/call_empty_or_block_err.vv:11:2: warning: unused variable: `y`
    9 |     a := foo() or { foo() or {} }
   10 | 
   11 |     y := if c := foo() {
      |     ^
   12 |         dump(c)
   13 |         bar() or {}
vlib/v/checker/tests/call_empty_or_block_err.vv:18:2: warning: unused variable: `z`
   16 |     }
   17 | 
   18 |     z := if d := foo() {
      |     ^
   19 |         dump(d)
   20 |         bar() or {}
vlib/v/checker/tests/call_empty_or_block_err.vv:9:24: error: assignment requires a non empty `or {}` block
    7 | 
    8 | fn test_main() {
    9 |     a := foo() or { foo() or {} }
      |                           ~~~~~
   10 | 
   11 |     y := if c := foo() {
vlib/v/checker/tests/call_empty_or_block_err.vv:13:3: error: the final expression in `if` or `match`, must have a value of a non-void type
   11 |     y := if c := foo() {
   12 |         dump(c)
   13 |         bar() or {}
      |         ~~~~~
   14 |     } else {
   15 |         false
